2007-07-06  Satoshi Nakagawa <artension@gmail.com>

	Changed to use AsyncSocket for DCC file sending.
	Cut off needless objc_method.
	Fixed a bug, port should be stored as integer.

2007-07-06  Satoshi Nakagawa <artension@gmail.com>

	Changed type encodings of TcpClient#onSocket_didConnectToHost_port.

2007-07-05  Satoshi Nakagawa <artension@gmail.com>

	Changed to view connecting status of DCC file receiver items.

2007-07-05  Satoshi Nakagawa <artension@gmail.com>

	Replaced all '...' to \U2026 in nib files.

2007-07-05  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, application crushes when talk button on whois dialog is pushed two times.

2007-07-04  Satoshi Nakagawa <artension@gmail.com>

	Changed plist filename from _LimeChat.plist to LimeChat.plist on trunk.

2007-07-04  Satoshi Nakagawa <artension@gmail.com>

	Changed to set ENV['RUBYCOCOA_THREAD_HOOK_DISABLE'] on init.

2007-07-02  Satoshi Nakagawa <artension@gmail.com>

	Changed to wrap float return value of getDblTime with NSNumber.

2007-06-29  Satoshi Nakagawa <artension@gmail.com>

	Changed to ignore empty input for input buffer.

2007-06-28  Satoshi Nakagawa <artension@gmail.com>

	Added half-width kana support.

2007-06-28  Satoshi Nakagawa <artension@gmail.com>

	Changed to use objc_alias_method to override methods with objc_method.

2007-06-28  Satoshi Nakagawa <artension@gmail.com>

	Improved convert_to_ruby_obj in userdefaultsaccess.rb.

2007-06-27  Satoshi Nakagawa <artension@gmail.com>

	Changed type encoding of BOOL from 'i' to 'c' for objc_method.

2007-06-26  Satoshi Nakagawa <artension@gmail.com>

	Ported JavaScript bridge completely to ruby.
	Added OldEventManager for GetDblTime.

2007-06-26  Satoshi Nakagawa <artension@gmail.com>

	Workaround for objc_method problem, must add ':' as suffix in some cases.

2007-06-26  Satoshi Nakagawa <artension@gmail.com>

	Converted addRubyMethod to objc_method.
	Added objc_method to some methods.
